# AlarmTimer

./: .gitignore  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
MainApp/: CMakeLists.txt  main.cpp
MainApp/Core/: TimeConfiguration.cpp  TimeConfiguration.h  TimeSave.cpp  TimeSave.h
MainApp/QWidgets/: TargetTimeDialog.cpp  TargetTimeDialog.h  TargetTimeDialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
MainApp/Res/: configuration.json
